# Android-UltimateGPUImage

./: .gitignore  Index_of_Filters.md  Index_of_Filters_CN.md  README.md  README_CN.md  build.gradle  settings.gradle
face/: CMakeLists.txt  build.gradle
face/src/androidTest/java/com/example/face/: ExampleInstrumentedTest.java
face/src/main/: AndroidManifest.xml
face/src/main/cpp/: config.h  face_detector.cpp  face_detector.h  jdata_complier.cpp  jdata_complier.h  jstring_complier.cpp  jstring_complier.h  native-test.cpp
face/src/main/dlib/: CMakeLists.txt  config.h.in  revision.h
face/src/main/dlib/all/: source.cpp
face/src/main/dlib/image_loader/: jpeg_loader.cpp  png_loader.cpp
face/src/main/dlib/image_saver/: save_png.cpp
face/src/main/java/cn/co/willow/android/face/: AssetsUtil.java  FaceDetectorDemoActivity.java  FaceDetectorManager.java  FaceInfo.java
face/src/main/res/layout/: activity_main.xml  content_main.xml
face/src/main/res/values/: strings.xml
face/src/test/java/com/example/face/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/res/drawable/: control_alert_camera_btn.xml  control_seitch_camera_btn.xml  oval_red_point.xml  rectangle_black_radius_bg.xml  rectangle_green_radius_bg.xml  rectangle_green_radius_bg_p.xml  rectangle_red_radius_bg.xml
sample/src/main/res/layout/: activity_face_detector.xml  activity_sample.xml  activity_splash.xml  holder_video_controller.xml  holder_video_player.xml  holder_video_recorder_gl.xml
(+29 files in other folders)
